--- a/index.html
+++ b/index.html
@@ -1,13 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-   Hello World!!!
-</body> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homepage</title>
+  </head>
+  <body>
 
+    <nav>
+      <a href="http://127.0.0.1:5500/About.html"
+        ><button>About Us</button></a>
+    </nav>
+
+
+    <main>
+
+      <section>
+        <h1>To do list</h1>
+        <p>Lets get all of these done by EOY </p>
+        <img src="./assets/Picture4.png" alt="">
+        <ul>
+          <li>Land $100k+ job</li>
+          <li>Finish Frontend Simplified</li>
+          <li>Network with other people in the Discord Server</li>
+        </ul>
+      </section>
+
+
+
+      <section>
+        <h1>Land $100k+ job</h1>
+        <ol>
+          <li>Finish Frontend Simplified</li>
+          <li>Study for Interviews</li>
+          <li>Apply to jobs</li>
+        </ol>
+      </section>
+
+    </main>
+
+
+    <footer>
+      <h6>&#169; Copyright terms and condition</h6>
+    </footer>
+
+
+
+  </body>
 </html>
