--- a/Login.html
+++ b/Login.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Login</h1>
-    <form>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    
+    <div>
+     
+
+      <form>   <h1>Sign up</h1>
         <div>
-        <label for="">Email</label>
-        <input type="email" required>
+          <label for="">Email</label>
+          <input type="email" required />
         </div>
-        <br>
+
         <div>
-        <label for="">Password</label>
-        <input type="password">
+          <label for="">Password</label>
+          <input type="password" t />
         </div>
-        <br>
-        <br>
+
         <div>
-        <label for=""> Confirm <Span> password</Span></label>
-        <input type="password">
+          <label for=""> Confirm <span> password</span></label>
+          <input type="password" />
         </div>
-        <br>
+
         <div>
-        <label for=""> Age </label>
-        <input type="number">
+          <label for=""> Age </label>
+          <input type="number" />
         </div>
-        <br>
+
         <div>
-        <label for=""> Date </label>
-        <input type="date" required>
+          <label for=""> Date </label>
+          <input type="date" required />
         </div>
-        <br>
+
         <div>
-            <button>Submit</button>
+          <button>Submit</button>
         </div>
-    </form>
-</body>
+      </form>
+    </div>
+  </body>
 </html>
